add monthly favourites table

--- a/index.html
+++ b/index.html
@@ -63,6 +63,49 @@
             </div>
         </section>
         <!-- /.features -->
+
+        <hr>
+
+        <!-- Monthly Favourites -->
+        <section>
+            <h2>Monthly Favourites</h2>
+           <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Origin</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>WhistlePig Rye Whiskey</td>
+                    <td>Portugal</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Sazerac Rye</td>
+                    <td>USA</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Starward Left-Field Single Malt</td>
+                    <td>Australia</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>Pike Creek</td>
+                    <td>Canada</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>The Chita Single Grain</td>
+                    <td>Japan</td>
+                </tr>
+            </tbody>
+           </table>
+        </section>
     </article>
 </body>
 
