--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whiskey Drop | Taste a new whiskey every month</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/abff2078e5.js" crossorigin="anonymous"></script>
+    <title>Whiskey Drop | Taste a new whiskey every month</title>
 </head>
 
 <body>
+    <!-- Navigation -->
     <nav class="navbar navbar-light bg-light navbar-expand-sm">
         <a href="" class="navbar-brand">Whiskey Drop</a>
         <ul class="navbar-nav mr-auto">
@@ -21,7 +23,16 @@
             <a href="">Sign In / Sign Up</a>
         </div>
     </nav>
+    <!-- /Navigation -->
+    
     <article class="container mt-3">
+        <div class="row d-none d-sm-block">
+            <div class="col12">
+                <div class="alert alert-warning">
+                    <strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subscription for the price of 6! <a href="">See here for details!</a>
+                </div>
+            </div>
+        </div>
         <!-- Callout -->
         <div class="row">
             <div class="col-12">
@@ -50,7 +61,9 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <div class="media">
-                        <img src="images/girl-image.png" alt="Woman wearing a hat posing for a photo" class="rounded-circle mr-3" height="100" width="100">
+                        <div class="d-none d-sm-block">
+                            <img src="images/girl-image.png" alt="Man with sunglasses and beard posing for a photo" class="rounded-circle mr-3" height="100" width="100">
+                        </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
                                 <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
@@ -61,7 +74,9 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="media">
-                        <img src="images/guy-image.png" alt="Man with sunglasses and beard posing for a photo" class="rounded-circle mr-3" height="100" width="100">
+                        <div class="d-none d-sm-block">
+                            <img src="images/guy-image.png" alt="Man with sunglasses and beard posing for a photo" class="rounded-circle mr-3" height="100" width="100">
+                        </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
                                 <p>I haven't been sober for months!</p>
@@ -85,7 +100,7 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3>Feature 1</h3>
+                        <h3><i class="fa-solid fa-gift d-none d-sm-block"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                             aliquip ex ea commodo consequat.</p>
@@ -94,7 +109,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3>Feature 2</h3>
+                        <h3><i class="fa-solid fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                             aliquip ex ea commodo consequat.</p>
@@ -103,7 +118,7 @@
                 </div>
                 <div class="col-12 d-md-none d-lg-block col-lg-4">
                     <div class="feature">
-                        <h3>Feature 3</h3>
+                        <h3><i class="fa-solid fa-circle-xmark d-none d-sm-block"></i> Feature 3</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                             aliquip ex ea commodo consequat.</p>
