--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
         </div>
     </nav>
     <!-- /Navigation -->
-    
+
     <article class="container mt-3">
         <div class="row d-none d-sm-block">
             <div class="col12">
                 <div class="alert alert-warning">
-                    <strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subscription for the price of 6! <a href="">See here for details!</a>
+                    <strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subscription for the price of 6!
+                    <a href="">See here for details!</a>
                 </div>
             </div>
         </div>
@@ -38,10 +39,11 @@
             <div class="col-12">
                 <section class="callout jumbotron text-center">
                     <h1>The finest whiskeys delivered to your doorstep.</h1>
-                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
+                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month.
                         <s class="d-none d-sm-inline">£19.99</s>
                         <span class="d-inline d-sm-none"><br></span>
-                        <strong><mark>First one is free!</mark></strong></p>
+                        <strong><mark>First one is free!</mark></strong>
+                    </p>
                     <button class="btn btn-success btn-lg">Sign Up!</button>
                     <p class="text-muted"><small>You must be over 18 to sign up for our service. Please drink
                             responsibly</small></p>
@@ -62,11 +64,13 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="images/girl-image.png" alt="Man with sunglasses and beard posing for a photo" class="rounded-circle mr-3" height="100" width="100">
+                            <img src="images/girl-image.png" alt="Man with sunglasses and beard posing for a photo"
+                                class="rounded-circle mr-3" height="100" width="100">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
-                                <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
+                                <p>I've been introduced to more than 10 great international whiskeys I never knew about.
+                                </p>
                                 <p>- Jane Doe</p>
                             </blockquote>
                         </div>
@@ -75,7 +79,8 @@
                 <div class="col-12 col-md-6">
                     <div class="media">
                         <div class="d-none d-sm-block">
-                            <img src="images/guy-image.png" alt="Man with sunglasses and beard posing for a photo" class="rounded-circle mr-3" height="100" width="100">
+                            <img src="images/guy-image.png" alt="Man with sunglasses and beard posing for a photo"
+                                class="rounded-circle mr-3" height="100" width="100">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
@@ -100,9 +105,12 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
-                        <h3><i class="fa-solid fa-gift d-none d-sm-block"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        <h3><i class="fa-solid fa-gift d-none d-sm-block"></i> Feature 1 <span
+                                class="badge badge-success">NEW!</span></h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi ut
                             aliquip ex ea commodo consequat.</p>
                         <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                     </div>
@@ -110,8 +118,10 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="feature">
                         <h3><i class="fa-solid fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi ut
                             aliquip ex ea commodo consequat.</p>
                         <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                     </div>
@@ -119,8 +129,10 @@
                 <div class="col-12 d-md-none d-lg-block col-lg-4">
                     <div class="feature">
                         <h3><i class="fa-solid fa-circle-xmark d-none d-sm-block"></i> Feature 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi ut
                             aliquip ex ea commodo consequat.</p>
                         <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                     </div>
@@ -134,44 +146,53 @@
         <!-- Monthly Favourites -->
         <section>
             <h2>Monthly Favourites</h2>
-           <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Origin</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>WhistlePig Rye Whiskey</td>
-                    <td>Portugal</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Sazerac Rye</td>
-                    <td>USA</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Starward Left-Field Single Malt</td>
-                    <td>Australia</td>
-                </tr>
-                <tr>
-                    <th scope="row">4</th>
-                    <td>Pike Creek</td>
-                    <td>Canada</td>
-                </tr>
-                <tr>
-                    <th scope="row">5</th>
-                    <td>The Chita Single Grain</td>
-                    <td>Japan</td>
-                </tr>
-            </tbody>
-           </table>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Origin</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>WhistlePig Rye Whiskey</td>
+                        <td>Portugal</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Sazerac Rye</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Starward Left-Field Single Malt</td>
+                        <td>Australia</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">4</th>
+                        <td>Pike Creek</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">5</th>
+                        <td>The Chita Single Grain</td>
+                        <td>Japan</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </article>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
