--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/abff2078e5.js" crossorigin="anonymous"></script>
     <title>Whiskey Drop | Taste a new whiskey every month</title>
 </head>
@@ -43,7 +45,7 @@
     </nav>
     <!-- /Navigation -->
 
-    <article class="container mt-3">
+    <!-- <div class="container alert-container">
         <div class="row d-none d-sm-block">
             <div class="col12">
                 <div class="alert alert-warning">
@@ -52,11 +54,13 @@
                 </div>
             </div>
         </div>
+    </div> -->
+    <div class="container-fluid callout-container">
         <!-- Callout -->
         <div class="row">
             <div class="col-12">
                 <section class="callout jumbotron text-center">
-                    <h1>The finest whiskeys delivered to your doorstep.</h1>
+                    <h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
                     <p class="lead">Sign up today to start receiving the world's best whiskeys every month.
                         <s class="d-none d-sm-inline">£19.99</s>
                         <span class="d-inline d-sm-none"><br></span>
@@ -68,10 +72,11 @@
                 </section>
             </div>
         </div>
-        <!-- /.callout -->
-        <hr>
+    </div>
+    <!-- /.callout -->
 
         <!-- Quotes -->
+        <div class="container quotes-container">
         <section class="quotes">
             <div class="row">
                 <div class="col-12 my-5">
@@ -111,9 +116,10 @@
             </div>
         </section>
         <!-- /.quotes -->
-        <hr>
+        </div>
 
         <!-- Features -->
+        <div class="features-container">
         <section class="features">
             <div class="row">
                 <div class="col-12 my-5">
@@ -158,8 +164,7 @@
             </div>
         </section>
         <!-- /.features -->
-
-        <hr>
+        </div>
 
         <!-- Monthly Favourites -->
         <section>
@@ -201,7 +206,6 @@
                 </tbody>
             </table>
         </section>
-    </article>
 
     <!-- Modal -->
     <div class="modal" tabindex="-1" id="signUpModal">
